--- a/Formularz.html
+++ b/Formularz.html
@@ -35,3 +35,9 @@
 <td>Dodatkowe<br>umiejętności</td><td><textarea rows="12" cols="30"></textarea>
 </table>
 </fieldset>
+<table>
+<tr><td><input type="submit" value="Wyślij"></td></tr>
+</table>
+</form>
+</body>
+</html>
